<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeyondTO</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_medal">MedalActivity</string>
    <string name="app_id">513404242105233</string>
    
    <!-- Stringhe Login Fragment -->
    <string name="titoloLogin">%1$s</string>
    <string name="sottotitolo">%1$s</string>
   
    <!-- Stringhe Home : Pagina Utente -->
    <string name="nomeUtente">%1$s</string>
    <string name="clanAppartenenza">Clan %1$s</string>
    <string name="puntiUtente">Punti Utente: %1$s</string>
    <string name="edificiConquistati">Edifici conquistati: %1$s</string>
    
    <!-- Stringhe Home : Pagina Clan -->
    <string name="nomeClan">Clan %1$s</string>
    <string name="numMembri">Membri: %1$s</string>
    <string name="numVittorie">Vittorie: %1$s</string>
    
    <!-- Stringhe Home : Pagina Chat -->
    <string name="nomeChat">Stai per entrare nella Chat %1$s</string>
    
    <!-- Stringhe Mappa -->
    <string name="action">Vuoi %1$s questo luogo?</string>
    <string name="proprierty">Questo luogo appartiene a: %1$s</string>
    <string name="statePlace">Stato luogo: %1$s</string>
    <string name="numberAtt">Attaccanti: %1$s</string>
    <string name="numberDif">Difensori: %1$s</string>
    <string name="textFirstAtt">Orario primo attacco: %1$s</string>
    
    <!-- Stringa Fine gioco -->
    <string name="punteggioFinale">Hai totalizzato %1$s punti</string>
        
    <!-- Stringhe Notifiche -->
    <string name="notificaAtt">ATTACCO!</string>
    <string name="notificaDif">DIFESA</string>
    <string name="testoNotifica">%1$s</string>
    
    <!-- Stringhe bottone share Facebook -->
    <string name="share">Condividi su Facebook</string>
    
</resources>
